# Wake

./: .wake.config  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  MAINTAINERS  NPM_UPDATE_INSTRUCTIONS.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  STATUS.md  build_fix.sh  install.sh  rebrand.sh  test_hardware_tools.rs  verify_build.sh
.github/workflows/: build.yml  release.yml
docs/: HARDWARE_EXAMPLES.md  RELEASE_GUIDE.md
examples/: simple_hardware_test.rs
npm/: .npmignore  PUBLISHING_GUIDE.md  README.md  TROUBLESHOOTING.md  download-wake.js  index.js  install.js  package.json  publish.sh
wake-cli/: Cargo.toml
wake-cli/src/: main.rs
wake-cli/src/fc/: client.rs  history.rs  mod.rs  protocol.rs  server.rs  tests.rs
wake-cli/src/headless/: app.rs  tools.rs
wake-cli/src/shell/: mod.rs  pty.rs  rc.rs  terminal.rs
wake-cli/src/tui/: app.rs  cmdnav.rs  command.rs  helper.rs  input.rs  mod.rs  perm.rs  perm_alt_screen.rs  theme.rs
wake-cli/src/tui/auth/: auth.rs  config_env.rs  config_list.rs  config_model.rs  config_providers.rs  mod.rs
wake-core/: Cargo.toml
wake-core/src/: lib.rs  logging.rs
wake-core/src/agent/: agent.rs  brain.rs  builder.rs  claims.rs  error.rs  events.rs  mod.rs  protocol.rs  tests.rs
wake-core/src/config/: config.rs
wake-core/src/runners/: mod.rs
wake-core/src/tools/: highlight.rs  mod.rs  tests_llm.rs  types.rs
wake-llm/: Cargo.toml
wake-llm/src/: chat.rs  client.rs  lib.rs  provider.rs
wake-llm/src/examples/: basic_query.rs  function_calling.rs  mod.rs  (+3 more)
wake-macros/: Cargo.toml
wake-macros/src/: lib.rs
(+97 files in other folders)
